# Etude

./: .gitignore  LICENSE  README.md  beat.ipynb  config.json  demo.ipynb  eval.ipynb  evaluate.py  index.html  infer.py  infer.sh  miditok.ipynb  prepare.ipynb  prepare.py  pyproject.toml  requirements.txt  setup.py  src.json  train.py
assets/: etude_decoder_config.json  vocab.json
beat_detection/: beat_detection.py
configs/: data_prepare_config.yaml  dataset_config.yaml  default.yaml  evaluate_config.yaml  evaluation_config.yaml  extract_config.yaml  inference_config.yaml  prepare_config.yaml  project_config.yaml  structuralize_config.yaml  training_config.yaml  transcription_config.yaml
corpus/: __init__.py  dataset.py  extract.py  generate_tempo.py  prepare.py  seperate.py  synchronize.py  tempo.py  tokenizer.py  tokenizer_v2.py  volume.py
docs/: demo.html  demo1.html  demo2.html  index.html
docs/songs/: metadata.json
etude/config/: __init__.py  loader.py  schema.py
etude/data/: aligner.py  beat_analyzer.py  beat_detector.py  dataset.py  extractor.py  tokenizer.py  vocab.py
etude/decode/: tokenizer.py  vocab.py
etude/evaluation/: reporting.py  runner.py
etude/extract/: extractor.py
etude/models/: amt_apc.py  beat_transformer.py  etude_decoder.py  hft_transformer.py
etude/structuralize/: aligner.py  beat_analyzer.py
etude/transcription/: hft_transformer.py
etude/utils/: download.py  logger.py  model_loader.py  preprocess.py  training_utils.py
evaluation/: IPE.py  RGC.py  WPD.py  __init__.py  __main__.py
infer/: _infer.py
models/: __init__.py  _models.py
models/Etude_Decoder/: model.py
models/hFT_Transformer/: amt.py
scripts/: prepare_dataset.py  run_beat_detection.py  run_separation.py
scripts/utils/: compare_models.py
songs/: metadata.json
songs/CPOP01/: etude_d.mid  human.mid  wp.json
songs/CPOP02/: amtapc.mid  etude_d.mid  etude_d_d.mid  human.mid  wp.json
songs/CPOP03/: amtapc.mid  etude_d_d.mid  human.mid
songs/CPOP04/: etude_d.mid  etude_d_d.mid  etude_e.mid  human.mid  wp.json
songs/CPOP05/: etude_d.mid  human.mid  wp.json
songs/CPOP06/: etude_d_d.mid  human.mid  music2midi.mid  wp.json
songs/CPOP07/: etude_d_d.mid  wp.json
songs/CPOP08/: human.mid  music2midi.mid  wp.json
songs/CPOP4/: wp.json  (+4 more)
utils/: __init__.py  _config.py  _download.py  compare_files.py  compare_models.py  convert_checkpoint.py  inspect_checkpoint.py  midi_tool.py  test.py
(+899 files in other folders)
